force-app/main/default/objects/Notification_Setting__c/fields/Event_Object__c.field-meta.xml
<CustomField>
    <fullName>Event_Object__c</fullName>
    <label>Event Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leave_Request__c</fullName>
            </value>
            <value>
                <fullName>Expense__c</fullName>
            </value>
            <value>
                <fullName>Expense_Item__c</fullName>
            </value>
            <value>
                <fullName>Claim__c</fullName>
            </value>
            <value>
                <fullName>Sales_Order__c</fullName>
            </value>
            <value>
                <fullName>Return_Order__c</fullName>
            </value>
            <value>
                <fullName>Scheme__c</fullName>
            </value>
            <value>
                <fullName>Journey_Plan__c</fullName>
            </value>
            <value>
                <fullName>Visit__c</fullName>
            </value>
            <value>
                <fullName>Day_Attendance__c</fullName>
            </value>
            <value>
                <fullName>Collection__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>