force-app/main/default/objects/Notification_Setting__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific User</fullName>
            </value>
            <value>
                <fullName>Record Owner</fullName>
            </value>
            <value>
                <fullName>Owners Manager</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>